--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -14,7 +14,7 @@ listing:
     - ../../developer/validmind-library.qmd
 ---
 
-Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, and edit your generated model documentation using the {{< var validmind.platform >}}.
+Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, and review your generated model documentation using the {{< var validmind.platform >}}.
 
 ::: {.attn}
 
@@ -63,7 +63,7 @@ Our companion notebook, **Quickstart for model documentation,**[^3] will walk yo
 {{< include /get-started/common-assets/_run-quickstart-notebook.qmd >}}
 
 ::: {.column-margin}
-Example success message:
+**Example success message:**
 
 ```bash
 2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
