--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -14,7 +14,7 @@ listing:
     - ../../developer/validmind-library.qmd
 ---
 
-Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, and review your generated model documentation using the {{< var validmind.platform >}}.
+Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, and review your generated model documentation within the {{< var validmind.platform >}}.
 
 ::: {.attn}
 
