--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -4,4 +4,4 @@ date: last-modified
 page-layout: full
 ---
 
-Use the {{< var validmind.developer >}} to run tests and validate a model, log your findings, and work with a validation report within in the {{< var validmind.platform >}}.
+Use the {{< var validmind.developer >}} to run tests and validate a model, then attach your test results as evidence to your validation report in the {{< var validmind.platform >}}.
