--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -16,14 +16,7 @@ listing:
 
 Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, then review your generated model documentation within the {{< var validmind.platform >}}.
 
-::: {.attn}
-
-## {{< fa star-of-life >}} Before you begin
-
-- [x] To try out {{< var vm.product >}}, you need to be a registered user on the {{< var validmind.platform >}}.[^1]
-- [x] You'll also want to make sure that you're logged into the {{< var validmind.platform >}}.[^2]
-
-:::
+{{< include /get-started/common-assets/_before-you-begin.qmd >}}
 
 ## Register your first model
 
