--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -4,4 +4,27 @@ date: last-modified
 page-layout: full
 ---
 
-Set up your organization, onboard new users, and set up user roles, permissions, and groups within the {{< var validmind.platform >}} as a superuser.
+Set up the foundational units for your organization within the {{< var validmind.platform >}}, then grant access to your first user.
+
+<!-- BECK'S OUTLINE / NOTES -->
+
+<!-- {{< include /get-started/common-assets/_before-you-begin.qmd >}}
+
+## Setting up your organization
+
+### Set up business units
+
+### Set up use cases
+
+## Preparing your organization for users
+
+### Set up groups
+
+### Set up roles
+
+## Inviting your first user
+
+## What's next
+
+- Administrator Fundamentals
+- ValidMind Platform Guides -->
