--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -5,3 +5,18 @@ page-layout: full
 ---
 
 Use the {{< var validmind.developer >}} to run tests and validate a model, then attach your test results as evidence to your validation report in the {{< var validmind.platform >}}.
+
+<!-- BECK'S OUTLINE / NOTES -->
+
+{{< include /get-started/common-assets/_before-you-begin.qmd >}}
+
+<!-- ## Register a model for validation
+
+## Using the {{< var validmind.developer >}}
+
+## Add evidence to your validation report
+
+## What's next
+
+- Validator Fundamentals
+- ValidMind Library -->
