--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -8,9 +8,9 @@ Use the {{< var validmind.developer >}} to run tests and validate a model, then 
 
 <!-- BECK'S OUTLINE / NOTES -->
 
-{{< include /get-started/common-assets/_before-you-begin.qmd >}}
+<!-- {{< include /get-started/common-assets/_before-you-begin.qmd >}}
 
-<!-- ## Register a model for validation
+## Register a model for validation
 
 ## Using the {{< var validmind.developer >}}
 
