--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -22,7 +22,7 @@ Set up the foundational units for your organization within the {{< var validmind
 
 ### Set up roles
 
-## Inviting your first user
+## Invite your first user
 
 ## What's next
 
