--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -4,7 +4,7 @@ date: last-modified
 page-layout: full
 ---
 
-Set up the foundational units for your organization within the {{< var validmind.platform >}}, then grant access to your first user.
+Set up the foundational units for your organization within the {{< var validmind.platform >}}, prepare your organization for users, then grant access to your first user.
 
 <!-- BECK'S OUTLINE / NOTES -->
 
