Manage model workflows done

--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -3,7 +3,7 @@ title: "Manage model workflows"
 date: last-modified
 ---
 
-wip
+Review and run workflows configured for your organization on your models.
 
 ::: {.attn}
 
@@ -18,29 +18,26 @@ wip
 
 ## Review model workflows
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^4]
-
-3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
-
-4. Click on the name of any active workflow to review that workflow's details.
-
-5. Click on the tab you would like to review:
-
-    - **Details** —
-    - **Activity** —
-    - **Findings** —
-    - **Workflow** —
-
-#### Review model workflow details
+{{< include _review-model-workflows.qmd >}}
 
 ## Run model workflows
 
+To manually run a workflow[^4] for a specific model:
 
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-<!-- {{< include _model-workflows-see.qmd >}} -->
+2. Select a model or find your model by applying a filter or searching for it.[^5]
 
+3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+
+4. Click **{{< fa arrow-right-arrow-left >}} See all workflows**.
+
+5. Select **{{< fa arrow-right >}} Run workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
+
+    - **Run Now** — Workflow starts instantly.
+    - **Scheduled Run** — Set a future date to run the workflow.
+
+6. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
 
 
 <!-- FOOTNOTES -->
@@ -51,5 +48,10 @@ wip
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^4]:
 
+    ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
+    Refer to [Configure custom workflows](configure-custom-workflows.qmd) for more details.
+    :::
+
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
