--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -11,14 +11,6 @@ listing:
     contents:
     - manage-model-stages.qmd
     - configure-custom-workflows.qmd
-  - id: whats-next
-    type: grid
-    grid-columns: 2
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    contents:
-    - working-with-model-workflows.qmd
 ---
 
 Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.
@@ -199,9 +191,7 @@ To configure a wait step, select when you would like to [resume workflow]{.small
 
 ## What's next
 
-:::{#whats-next}
-:::
-
+- [Working with model workflows](working-with-model-workflows.qmd)
 
 <!-- FOOTNOTES -->
 
