--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -3,7 +3,7 @@ title: "Manage model workflows"
 date: last-modified
 ---
 
-Review and run workflows configured for your organization on your models.
+Review workflows associated with your models, and initiate or abort workflows configured for your organization on your models.
 
 ::: {.attn}
 
@@ -20,9 +20,9 @@ Review and run workflows configured for your organization on your models.
 
 {{< include _review-model-workflows.qmd >}}
 
-## Run model workflows
+## Initiate model workflows
 
-To manually run a workflow[^4] for a specific model:
+To manually start a workflow[^4] for a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -38,6 +38,22 @@ To manually run a workflow[^4] for a specific model:
     - **Scheduled Run** — Set a future date to run the workflow.
 
 6. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+## Abort workflows
+
+To remove a workflow from a model:
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^6]
+
+3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+
+4. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
+
+5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
+
+6. On the confirmation page, leave **[restart workflow after aborting.]{.smallcaps}** untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
 
 
 <!-- FOOTNOTES -->
@@ -55,3 +71,5 @@ To manually run a workflow[^4] for a specific model:
     :::
 
 [^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
