--- a/site/guide/model-workflows/transition-model-workflows.qmd
+++ b/site/guide/model-workflows/transition-model-workflows.qmd
@@ -3,7 +3,7 @@ title: "Transition model workflows"
 date: last-modified
 ---
 
-wip
+Transition a model's workflow into its next state, or reset a workflow on a model.
 
 ::: {.attn}
 
@@ -13,39 +13,29 @@ wip
 - [x] The model is registered in the model inventory.[^1]
 - [x] Model stages have already been customized for use in workflows.[^2]
 - [x] Workflows have already been set up for use with your models.[^3]
-- [x] You are a assigned role with sufficient permissions to transition the workflow into its next state.[^4] 
+- [x] You are a assigned role with sufficient permissions to transition the workflow into its next state.[^4]
 
 :::
 
-## Transition workflow states*
+## Transition model workflows
 
-::: {.callout-important title="Roles and action visibility"}
-Depending on the configuration of your workflows, you may or may not be able to move a model into another workflow state as actions can be gated to only users of certain roles. 
+{{< include _transition-model-workflows.qmd >}}
 
-When all the actions that can be performed by your role are completed for that model at that stage of the workflow, the Actions section will disappear from view. 
-:::
+## Reset your model workflow
 
-To transition the overall workflow status for a model:
-
-{{< include _model-workflows-transition.qmd >}}
-
-![Transitioning a workflow status under the ACTIONS section](transition-workflow.gif){fig-alt="A gif showing transitioning a workflow status under the ACTIONS section" .screenshot width=90%}
-
-### Reset your model workflow*
-
-If you need to reset your model's workflow to the beginning: 
+If you need to reset a model's workflow to the beginning:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. Click on **[model status]{.smallcaps}**.
+3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
-4. Select **Reset Workflow**.
+4. Click on the name of the workflow you'd like to reset to open that specific workflow's details.
 
-    After you confirm, that model's workflow will be returned to its initial state.
+5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
 
-![Resetting a workflow to its initial state](reset-workflow.gif){fig-alt="A gif showing resetting a workflow to its initial state" .screenshot width=90%}
+6. On the confirmation page, toggle **[restart workflow after aborting.]{.smallcaps}**, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
 
 
 <!-- FOOTNOTES -->
