--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -22,6 +22,10 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 ## Initiate model workflows
 
+::: {.callout}
+By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
+:::
+
 To manually start a workflow[^4] for a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
@@ -40,6 +44,11 @@ To manually start a workflow[^4] for a specific model:
 6. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
 
 ## Abort workflows
+
+::: {.callout}
+By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to abort workflows.
+:::
+
 
 To remove a workflow from a model:
 
