--- a/site/guide/model-workflows/transition-model-workflows.qmd
+++ b/site/guide/model-workflows/transition-model-workflows.qmd
@@ -23,6 +23,11 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 ## Reset your model workflow
 
+::: {.callout}
+By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to reset model workflows.
+:::
+
+
 If you need to reset a model's workflow to the beginning:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
