Forgot aliases, quick adjust

--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -12,6 +12,13 @@ listing:
     contents:
     - ../../training/developer-fundamentals/developer-fundamentals-register.qmd
     - ../../developer/validmind-library.qmd
+aliases: 
+  - try-with-jupyterhub.html
+  - try-with-colab.html
+  - try-in-your-own-environment.html
+  - ../platform/explore-sample-model-documentation.html
+  - ../platform/register-your-first-model.html
+  - ../platform/generate-documentation-for-your-model.html
 ---
 
 Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, then review your generated model documentation within the {{< var validmind.platform >}}.
