--- a/site/get-started/get-started.qmd
+++ b/site/get-started/get-started.qmd
@@ -3,9 +3,12 @@ title: "Get started with {{< var vm.product >}}"
 date: last-modified
 sidebar: false
 page-layout: full
+toc: false
 aliases:
   - ../guide/get-started.html
   - ../get-started/index.html
+  - quickstart.html
+  - platform/next-steps.html
 listing:
   - id: quickstart
     type: grid
@@ -20,7 +23,24 @@ listing:
       image: ../assets/img/validator-diagram.png
     - path: administrator/quickstart-administrator.qmd
       image: ../assets/img/admin-diagram.png
+  - id: get-help
+    type: grid
+    sort: false
+    grid-columns: 2
+    contents:
+      - path: ../support/support.qmd
+      - path: ../faq/faq.qmd
+        title: "Frequently Asked Questions"
+        description: "We curate several lists of frequently asked questions (FAQs) that might be of help."
+    fields: [title, description]
 ---
 
 :::{#quickstart}
+:::
+
+::: {.attn}
+
+:::{#get-help}
+:::
+
 :::
