quickstart: Model Development (#748)
* Setup for new developer quickstart

* Save point

* Save point

* Cleanup of old quickstart files

* Proofreading

* Single-sourcing common steps

* Proofreading

* Broken link cleanup

* Editing

* Tweak

* Edit

* Final edit for now

* I lied one more

* Notes & adjust

* Oops forgot to comment out a line

* Tweak

* Tweakkk

* Forgot aliases, quick adjust

--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -4,4 +4,19 @@ date: last-modified
 page-layout: full
 ---
 
-Use the {{< var validmind.developer >}} to run tests and validate a model, log your findings, and work with a validation report within in the {{< var validmind.platform >}}.
+Use the {{< var validmind.developer >}} to run tests and validate a model, then attach your test results as evidence to your validation report in the {{< var validmind.platform >}}.
+
+<!-- BECK'S OUTLINE / NOTES -->
+
+<!-- {{< include /get-started/common-assets/_before-you-begin.qmd >}}
+
+## Register a model for validation
+
+## Using the {{< var validmind.developer >}}
+
+## Add evidence to your validation report
+
+## What's next
+
+- Validator Fundamentals
+- ValidMind Library -->
