--- a/site/index.qmd
+++ b/site/index.qmd
@@ -155,7 +155,7 @@ a:hover {
 <script src="scripts/validsearch.js"></script>
 
 ::: {.tc}
-[quickstart](get-started/developer/try-with-jupyterhub.qmd){.button-pink .cta}
+[quickstart](get-started/get-started.qmd){.button-pink .cta}
 [open-source software](https://github.com/validmind/validmind-library/){.button-white .cta}
 
 :::
