WIP validation quickstart

--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -1,22 +1,149 @@
 ---
-title: "Quickstart — Model Validation [coming soon]{.smallercaps .pink}"
+title: "Quickstart — Model Validation [coming soon]"
 date: last-modified
-page-layout: full
+listing:
+  - id: whats-next
+    type: grid
+    grid-columns: 2
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+    - ../../training/validator-fundamentals/validator-fundamentals-register.qmd
+    - ../../developer/validmind-library.qmd
 ---
 
 Use the {{< var validmind.developer >}} to run tests and validate a model, then attach your test results as evidence to your validation report in the {{< var validmind.platform >}}.
 
-<!-- BECK'S OUTLINE / NOTES -->
-
-<!-- {{< include /get-started/common-assets/_before-you-begin.qmd >}}
+{{< include /get-started/common-assets/_before-you-begin.qmd >}}
 
 ## Register a model for validation
 
+In a usual model lifecycle, a champion model will have been independently registered in your model inventory and submitted to you for validation.
+
+For this quickstart, we'll have you register a dummy model and assign yourself as the validator to familiarize you with the {{< var validmind.platform >}} interface:
+
+{{< include /get-started/common-assets/_register-your-first-model.qmd >}}
+
+::: {.column-margin}
+![Registration modal with the options filled out for the model validation quickstart](validator-new-model.png){width=90% fig-alt="A screenshot showing the registration modal with the options filled out for the model validation quickstart" .screenshot}
+:::
+
+#### Assign validator credentials
+
+In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions.
+
+On the model details page after you've registered your model:
+
+1. Remove yourself as a model owner —
+
+    a. Click on the **[owners]{.smallcaps}** tile, then click on the **x** next to your name.
+    b. Click **Save** to apply your changes to that role.
+
+2. Remove yourself as a developer —
+
+    a. Click on the **[developers]{.smallcaps}** tile, then click on the **x** next to your name.
+    b. Click **Save** to apply your changes to that role.
+
+3. Add yourself as a validator —
+
+    a. Click on the **[validators]{.smallcaps}** tile, and select your name from the drop-down menu.
+    b. Click **Save** to apply your changes to that role.
+
+::: {.column-margin}
+![Model stakeholders with only the [validators]{.smallcaps} assigned](model-stakeholders.png){width=90% fig-alt="A screenshot showing the model stakeholders with only validators assigned" .screenshot}
+:::
+
+{{< include /get-started/common-assets/_get-your-code-snippet.qmd >}}
+
+::: {.column-margin}
+![{{< fa rocket >}} Getting Started page with a sample code snippet](validator-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
+:::
+
 ## Using the {{< var validmind.developer >}}
+
+Next, let's set up the {{< var validmind.developer >}} in your validation environment of choice so we can use it to run and log tests, which will help automate the validation of your models.
+
+Our companion notebook, **Quickstart for model validation,**[^1] will walk you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running data quality and model evaluation tests that will log the results to the {{< var validmind.platform >}}.
+
+{{< include /get-started/common-assets/_access-quickstart-notebook.qmd >}}
+
+<!-- NOT LIVE ON JUPYTERHUB YET, HASN'T BEEN UPDATED -->
+1. Open [Quickstart for model validation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_validation.ipynb) and [run the quickstart notebook](#run-the-quickstart-notebook).
+
+{{< include /get-started/common-assets/_download-notebooks.qmd >}}
+
+1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_validation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+
+{{< include /get-started/common-assets/_download-code-samples.qmd >}}
+
+1. Open `notebooks/quickstart/quickstart_model_validation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+
+{{< include /get-started/common-assets/_run-quickstart-notebook.qmd >}}
+
+::: {.column-margin}
+**Example success message:**
+
+```bash
+2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
+📊 Model: [ValidMind] Model validation quickstart (ID: cmalgf3qi02ce199qm3rdkl46)
+📁 Document Type: model_validation
+```
+:::
+
+3. Continue running the rest of the notebook to automatically populate test results for your sample model to your validation report for that model in the {{< var vm.platform >}}.
 
 ## Add evidence to your validation report
 
+After you successfully run the notebook, return to the {{< var validmind.platform >}}:
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Locate or search for the model you registered for this quickstart and click on it to select it.[^2]
+
+3. In the left sidebar that appears for the model, click **{{< fa shield >}} Validation Report**.
+
+   - Your model's validation is broken down into sections, defined by your validation report templates.[^3]
+   - Each section can be assigned a completion status,[^4] allowing you to track the progress of your documentation.*
+
+4. Click on any section of the validation to attach your test results and drafts of test result summaries generated by the {{< var validmind.developer >}} as evidence.
+
+   In any subsection, expand the **{{< var vm.product >}} Insights™** panel to view the Documentation Guidelines[^5] that tell you more about what these sections mean and help you with the task of documenting the model as a developer.*
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-40-ns .tc}
+
+![Example model details page with documentation outline](developer-model-details.png){width=90% fig-alt="A screenshot showing an example model details page with documentation outline" .screenshot group="documentation"}
+
+:::
+
+::: {.w-40-ns .tc}
+
+![Populated model documentation section with the **{{< var vm.product >}} Insights™** panel open](validmind-insights.png){width=90% fig-alt="A screenshot showing populated model documentation section with the ValidMind Insights™ panel open" .screenshot group="documentation"}
+
+:::
+
+::::
+
+
 ## What's next
 
-- Validator Fundamentals
-- ValidMind Library -->
+Now that you've grasped the basics of using {{< var vm.product >}} for model validation, continue on your journey with our end-to-end training course for validators and browse through our resource hub for the {{< var validmind.developer >}}:
+
+:::{#whats-next}
+:::
+
+
+<!-- FOOTNOTES -->
+
+[^1]: [Quickstart for model validation](/notebooks/quickstart/quickstart_model_validation.ipynb)
+
+[^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^3]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
+
+[^4]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
+
+[^5]: [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
+
