Validation quickstart draft

--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Quickstart — Setup & Administration [coming soon]{.smallercaps .pink}"
+subtitle: "10 minutes"
 date: last-modified
 ---
 
