--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Quickstart — Model Development"
+subtitle: "15 minutes"
 date: last-modified
 listing:
   - id: whats-next
@@ -65,8 +66,8 @@ Our companion notebook, **Quickstart for model documentation,**[^1] will walk yo
 **Example success message:**
 
 ```bash
-2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
-📊 Model: [ValidMind] Model development quickstart (ID: cmalgf3qi02ce199qm3rdkl46)
+2025-06-10 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
+📊 Model: [ValidMind] Model development quickstart (ID: cmbpnxrv6012o0g9w5049nsct)
 📁 Document Type: model_documentation
 ```
 :::
@@ -81,7 +82,7 @@ After you successfully run the notebook, return to the {{< var validmind.platfor
 
 2. Locate or search for the model you registered for this quickstart and click on it to select it.[^2]
 
-3. In the left sidebar that appears for the model, click **{{< fa book-open >}} Documentation**.
+3. In the left sidebar that appears for the model, click **{{< fa book-open >}} Documentation**:
 
    - Your model's documentation is broken down into sections, defined by your documentation templates.[^3]
    - Each section can be assigned a completion status,[^4] allowing you to track the progress of your documentation.
@@ -94,18 +95,17 @@ After you successfully run the notebook, return to the {{< var validmind.platfor
 
 ::: {.w-40-ns .tc}
 
-![Example model details page with documentation outline](developer-model-details.png){width=90% fig-alt="A screenshot showing an example model details page with documentation outline" .screenshot group="documentation"}
+![Example model details page with documentation outline](developer-model-details.png){fig-alt="A screenshot showing an example model details page with documentation outline" .screenshot group="documentation"}
 
 :::
 
 ::: {.w-40-ns .tc}
 
-![Populated model documentation section with the **{{< var vm.product >}} Insights™** panel open](validmind-insights.png){width=90% fig-alt="A screenshot showing populated model documentation section with the ValidMind Insights™ panel open" .screenshot group="documentation"}
+![Populated model documentation section with the **{{< var vm.product >}} Insights™** panel open](validmind-insights.png){fig-alt="A screenshot showing populated model documentation section with the ValidMind Insights™ panel open" .screenshot group="documentation"}
 
 :::
 
 ::::
-
 
 ## What's next
 
