--- a/site/get-started/common-assets/_run-quickstart-notebook.qmd
+++ b/site/get-started/common-assets/_run-quickstart-notebook.qmd
@@ -9,7 +9,7 @@ To initialize the {{< var validmind.developer >}} which connects your environmen
 
 1. Under the cell at bottom of the **Get your code snippet** section, confirm that you see a success message verifying that you've connected to the right model.
 
-   This message verifies that the {{< var vm.developer >}} works as expected as is connected to the correct model within the {{< var vm.platform >}}. 
+   This message verifies that the {{< var vm.developer >}} works as expected as is connected to the correct model and document type within the {{< var vm.platform >}}.
 
 [^longnote]:
 
