--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -163,7 +163,7 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model val
 
 [^4]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#provide-compliance-assessments)
 
-[^5]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#provide-compliance-assessments)
+[^5]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#link-validator-evidence)
 
 [^6]: [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)
 
