Quick edit to key concepts

--- a/site/about/glossary/key_concepts/_template.qmd
+++ b/site/about/glossary/key_concepts/_template.qmd
@@ -1,4 +1,7 @@
-template, documentation template
+documentation template
 : Functions as a test suite and lays out the structure of model documentation, segmented into various sections and sub-sections. Documentation templates define the structure of your model documentation, specifying the tests that should be run, and how the results should be displayed.
 
-{{< var vm.product >}} templates come with pre-defined sections, similar to test placeholders, including boilerplates and spaces designated for documentation and test results. When rendered, produces a document that model developers can use for model validation.
+validation report template
+: Serves as a standardized framework for conducting and documenting model validation activities. It outlines the required sections, recommended analyses, and expected validation tests, ensuring consistency and completeness across validation reports. The template helps guide validators through a systematic review process while promoting comparability and traceability of validation outcomes.
+
+    {{< var vm.product >}} templates come with pre-defined sections, similar to test placeholders, including boilerplates and spaces designated for test results, evidence, or findings.
