--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -91,6 +91,11 @@ After you successfully run the notebook, return to the {{< var validmind.platfor
 
    In any subsection, expand the **{{< var vm.product >}} Insights™** panel to view the Documentation Guidelines[^5] that tell you more about what these sections mean and help you with the task of documenting the model as a developer.
 
+5. Refine your model documentation by:
+
+   - Adding or editing content blocks[^6]
+   - Adding additional test results after you've logged them[^7]
+
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-40-ns .tc}
@@ -117,7 +122,6 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model dev
 
 <!-- FOOTNOTES -->
 
-
 [^1]: [Quickstart for model documentation](/notebooks/quickstart/quickstart_model_documentation.ipynb)
 
 [^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
@@ -127,3 +131,7 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model dev
 [^4]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
 
 [^5]: [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
+
+[^6]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+
+[^7]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
