--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -54,11 +54,11 @@ Our companion notebook, **Quickstart for model documentation,**[^1] will walk yo
 
 {{< include /get-started/common-assets/_download-notebooks.qmd >}}
 
-1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your development environment and [run the quickstart notebook](#run-the-quickstart-notebook).
 
 {{< include /get-started/common-assets/_download-code-samples.qmd >}}
 
-1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your development environment and [run the quickstart notebook](#run-the-quickstart-notebook).
 
 {{< include /get-started/common-assets/_run-quickstart-notebook.qmd >}}
 
