--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -74,11 +74,11 @@ Our companion notebook, **Quickstart for model validation,**[^1] will walk you t
 
 {{< include /get-started/common-assets/_download-notebooks.qmd >}}
 
-1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_validation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_validation.ipynb` in your validation environment and [run the quickstart notebook](#run-the-quickstart-notebook).
 
 {{< include /get-started/common-assets/_download-code-samples.qmd >}}
 
-1. Open `notebooks/quickstart/quickstart_model_validation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+1. Open `notebooks/quickstart/quickstart_model_validation.ipynb` in your validation environment and [run the quickstart notebook](#run-the-quickstart-notebook).
 
 {{< include /get-started/common-assets/_run-quickstart-notebook.qmd >}}
 
