--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -8,20 +8,76 @@ aliases:
 
 Configure workflows to match your organizational needs throughout your model lifecycles. Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
-To set up a workflow, you'll need to complete these two steps in sequence:
-
- 1. [Configure the workflow steps](#configure-workflow-steps)
- 2. [Link the workflow together](#link-workflow-together)
-
 ::: {.attn}
 
 ## Prerequisites
 
 - [x] {{< var link.login >}}
 - [x] Model stages must be fully configured.[^1]
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 :::
+
+## Create a custom workflow
+
+To set up a new custom workflow, you'll need to complete these three steps in sequence:
+
+ 1. [Add a new workflow](#add-workflows)
+ 2. [Configure the workflow steps](#configure-workflow-steps)
+ 3. [Link the workflow together](#link-workflow-together)
+
+### Add workflows
+
+To add a new blank workflow:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Workflows**.
+
+3. Click **{{< fa plus >}} Add Workflow**.
+
+4. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+
+5. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
+
+    - **Manually** — Start this workflow manually.[^3]
+    - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^4]
+    - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.[^5]
+
+6. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
+
+7. Click **Add Workflow** to save your blank workflow, and then [configure your workflow steps](#configure-workflow-steps).
+
+### Configure workflow steps
+
+To add or edit workflow steps:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Workflows**.
+
+3. Click on the workflow you'd like to modify, then:
+
+    - To add a step, drag and drop a new step onto the canvas.
+    - Double-click the new step to open up the configuration modal.
+
+4. After you're finished with step configuration, click **Update Step** to apply your changes.
+
+5. After you've configured a step, you can then [link your workflow together](/guide/model-workflows/configure-custom-workflows.qmd#link-workflow-together).
+
+::: {.callout}
+Refer to [Workflow step types](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types) for information on available step types and details on how to set up conditional requirements.
+
+:::
+
+<!-- {{< include _configure-workflow-steps.qmd >}} -->
+
+### Link workflow together
+
+## Edit existing workflows
+
+
+# OLD UNDER HERE
 
 ## Configure workflow steps*
 
@@ -97,7 +153,18 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Status Change](#status-change) steps
+[^3]: [Manage model workflows](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows)
+
+[^4]:
+
+    ::: {.callout title="Please note that only one workflow can be configured to initiate on model registration."}
+    <br>
+    [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+    :::
+
+[^5]: [Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)
+
+<!-- [^3]: [Status Change](#status-change) steps
 
 [^4]: [User Action](#user-action) steps
 
@@ -108,4 +175,4 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
     - [Configure workflow steps](#configure-workflow-steps)
     - [Approval](#approval) steps
 
-[^7]: [Status Change](#status-change) steps
+[^7]: [Status Change](#status-change) steps -->
