QuickStart casing fix

--- a/site/about/contributing/style-guide/conventions.qmd
+++ b/site/about/contributing/style-guide/conventions.qmd
@@ -311,7 +311,7 @@ aliases:
 ##### Hotlinked
 
 ```md
-{{{< video https://www.youtube.com/embed/rIR8Mql7eGs?si=vnZA_zP4tAjFjI4r title='ValidMind QuickStart' >}}}
+{{{< video https://www.youtube.com/embed/rIR8Mql7eGs?si=vnZA_zP4tAjFjI4r title='ValidMind Quickstart' >}}}
 ```
 
 ##### Embedded
