--- a/site/about/contributing/style-guide/voice-and-tone.qmd
+++ b/site/about/contributing/style-guide/voice-and-tone.qmd
@@ -79,7 +79,7 @@ Address the reader directly by using the second person.
 
 | Correct | Incorrect | 
 |------|-----|
-|   After completing this QuickStart, you will be able to view your test results as part of your model documentation right in the {{< var validmind.platform >}}.  |  After completing this QuickStart, the model developer will be able to view the test results as part of the model documentation right in the {{< var validmind.platform >}}.   |
+|   After completing this quickstart, you will be able to view your test results as part of your model documentation right in the {{< var validmind.platform >}}.  |  After completing this quickstart, the model developer will be able to view the test results as part of the model documentation right in the {{< var validmind.platform >}}.   |
 : **2nd person** examples {.hover}
 
 ### Avoid stiff formality
