--- a/site/developer/samples-jupyter-notebooks.qmd
+++ b/site/developer/samples-jupyter-notebooks.qmd
@@ -40,19 +40,16 @@ Our Jupyter Notebook code samples showcase the capabilities and features of the 
 
 ::::
 
-## QuickStart for Customer Churn Model Documentation — Full Suite
+## Quickstarts
 
-Learn how to use dataset and model documentation function on a simple customer churn model. The easiest way to try the QuickStart is on JupyterHub or Google Colaboratory:
+Learn how to develop or validate a simple customer churn model with {{< var vm.product >}}. The easiest way to try the quickstarts are on JupyterHub:
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
 
-JupyterHub
-: A a web-based platform when you can interact with Jupyter Notebook instances on a shared server. It is commonly used as a collaborative and interactive computing environment for data analysis, scientific research, and programming.
-
 ::: {.tc}
-[{{< fa code >}} Quickstart on JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb){.button target="_blank"}
+[{{< fa code >}} Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb){.button target="_blank"}
 
 :::
 
@@ -60,11 +57,8 @@ JupyterHub
 
 ::: {.w-40-ns}
 
-Google Colaboratory (Colab)
-: A free Jupyter Notebook environment that runs in the cloud. There, you can work with our Jupyter Notebooks by saving your own copy, write and execute code, share your work to collaborate with others in real-time.
-
 ::: {.tc}
-[{{< fa brands google >}} Quickstart on Colab](https://colab.research.google.com/drive/1NLtjCFUZV2I_ttGUkiAL9uwGZK_SGUlw?usp=share_link){.button target="_blank"}
+[{{< fa code >}} Quickstart for model validation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_validation.ipynb){.button target="_blank"}
 
 :::
 
