--- a/site/releases/2023/2023-oct-25/highlights.qmd
+++ b/site/releases/2023/2023-oct-25/highlights.qmd
@@ -226,12 +226,12 @@ We expanded our platform overview to provide more background information about w
 
 ::::
 
-<!---QuickStart updates for the closed beta by @nrichers in [#141](https://github.com/validmind/documentation/pull/141)--->
-#### QuickStart updates for the closed beta
+<!--- Quickstart updates for the closed beta by @nrichers in [#141](https://github.com/validmind/documentation/pull/141)--->
+#### Quickstart updates for the closed beta
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-80-ns}
-We updated the QuickStart section of our documentation to reflect recent {{< var validmind.platform >}} and sign-up flow changes. 
+We updated the quickstart section of our documentation to reflect recent {{< var validmind.platform >}} and sign-up flow changes. 
 :::
 
 ::: {.w-20-ns .tc}
