--- a/site/releases/2023/2023-sep-27/highlights.qmd
+++ b/site/releases/2023/2023-sep-27/highlights.qmd
@@ -120,7 +120,7 @@ run_test("ClassImbalance", dataset=dataset, params=params, send=True)
 
 ::: {.w-60-ns}
 <!---Add new `run_test` helper function by @cachafla in [#243](https://github.com/validmind/validmind-python/pull/243)--->
-We also updated the QuickStart notebook to have a consistent experience.
+We also updated the quickstart notebook to have a consistent experience.
 
 :::
 
