--- a/site/releases/2023/release-notes-2023-jul-24.qmd
+++ b/site/releases/2023/release-notes-2023-jul-24.qmd
@@ -145,7 +145,7 @@ To make it easier to try out our Jupyter Notebooks, we now provide a download bu
 ::: {.w-30-ns}
 **This download includes:**
 
-- QuickStart notebooks
+- Quickstart notebooks
 - Use case notebooks
 - Testing notebooks
 
