--- a/site/releases/2024/2024-mar-27/highlights.qmd
+++ b/site/releases/2024/2024-mar-27/highlights.qmd
@@ -430,7 +430,7 @@ The user guide sections for working with model documentation and preparing valid
 
 ::::
 
-<!---Replace Docker QuickStart with local one by @nrichers in [#157](https://github.com/validmind/documentation/pull/157)--->
+<!---Replace Docker quickstart with local one by @nrichers in [#157](https://github.com/validmind/documentation/pull/157)--->
 #### New quickstart for local developer environments
 
 :::: {.flex .flex-wrap .justify-around}
