--- a/site/releases/2024/2024-may-22/release-notes.qmd
+++ b/site/releases/2024/2024-may-22/release-notes.qmd
@@ -1027,7 +1027,7 @@ Check out the first official version of the **{{< var vm.product >}} style guide
 - See our reference for formatting conventions
 
 <!---
-PR #187: Add QuickStart video to the docs site
+PR #187: Add quickstart video to the docs site
 URL: https://github.com/validmind/documentation/pull/187
 Labels: documentation
 --->
@@ -1036,14 +1036,14 @@ PR #182: Quickstart docs site improvements
 URL: https://github.com/validmind/documentation/pull/182
 Labels: documentation
 --->
-#### QuickStart improvements
+#### Quickstart improvements
 
-We reworked our QuickStart experience to shorten the number of clicks it takes to get you started. 
+We reworked our quickstart experience to shorten the number of clicks it takes to get you started. 
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-70-ns}
-You can now access the QuickStart directly from the **homepage of our docs site**, where we direct you to the preferred QuickStart on JupyterHub right away.
+You can now access the quickstart directly from the **homepage of our docs site**, where we direct you to the preferred quickstart on JupyterHub right away.
 
 :::
 
@@ -1054,11 +1054,11 @@ You can now access the QuickStart directly from the **homepage of our docs site*
 
 ::::
 
-##### New QuickStart video
+##### New quickstart video
 
-A new three-minute video walks you through documenting a model with {{< var vm.product >}} and is now included in the QuickStart for JupyterHub:
+A new three-minute video walks you through documenting a model with {{< var vm.product >}} and is now included in the quickstart for JupyterHub:
 
-{{< video https://www.youtube.com/embed/rIR8Mql7eGs?si=vnZA_zP4tAjFjI4r title='ValidMind QuickStart' >}}
+{{< video https://www.youtube.com/embed/rIR8Mql7eGs?si=vnZA_zP4tAjFjI4r title='ValidMind Quickstart' >}}
 
 <!---
 PR #173: First draft for sandbox instructions
