--- a/site/get-started/common-assets/_download-notebooks.qmd
+++ b/site/get-started/common-assets/_download-notebooks.qmd
@@ -1,6 +1,6 @@
 #### Download the notebooks
 
-##### Option 1: Clone the GitHub repository
+**Option 1: Clone the GitHub repository**
 
 1. Open a terminal or command prompt.
 
