--- a/site/releases/2023/release-notes-2023-jun-22.qmd
+++ b/site/releases/2023/release-notes-2023-jun-22.qmd
@@ -101,7 +101,7 @@ We improved the search feature in the {{< var vm.platform >}} to make search res
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-80-ns}
-We revised our QuickStart guide to be more modular and to highlight that our suggested starting point with the {{< var validmind.developer >}} is now JupyterHub.
+We revised our quickstart guide to be more modular and to highlight that our suggested starting point with the {{< var validmind.developer >}} is now JupyterHub.
 
 :::
 
