removing future tenses

--- a/site/get-started/common-assets/_run-quickstart-notebook.qmd
+++ b/site/get-started/common-assets/_run-quickstart-notebook.qmd
@@ -5,7 +5,7 @@
 To initialize the {{< var validmind.developer >}} which connects your environment to the correct model in the {{< var validmind.platform >}}, you'll need your unique code snippet!^[[Get your code snippet](#get-your-code-snippet)]
 :::
 
-1. Follow the instructions to run the first two code cells in the notebook,[^longnote] which will set the stage by installing and initializing {{< var vm.product >}}.^[[Install and initialize the {{< var validmind.developer >}}](/developer/model-documentation/install-and-initialize-validmind-library.qmd)]
+1. Follow the instructions to run the first two code cells in the notebook,[^longnote] which sets the stage by installing and initializing {{< var vm.product >}}.^[[Install and initialize the {{< var validmind.developer >}}](/developer/model-documentation/install-and-initialize-validmind-library.qmd)]
 
 1. Under the cell at bottom of the **Get your code snippet** section, confirm that you see a success message verifying that you've connected to the right model.
 
