--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -43,9 +43,9 @@ The first step to using {{< var vm.product >}} to develop models is to register 
 
 ## Using the {{< var validmind.developer >}}
 
-Next, let's set up the {{< var validmind.developer >}} in your development environment of choice so we can use it to run and log tests, which will help automate the documentation of your models.
+Next, let's set up the {{< var validmind.developer >}} in your development environment of choice so we can use it to run and log tests, which helps automate the documentation of your models.
 
-Our companion notebook, **Quickstart for model documentation,**[^1] will walk you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running a full suite of documentation tests that will log the results to the {{< var validmind.platform >}}.
+Our companion notebook, **Quickstart for model documentation,**[^1] walks you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running a full suite of documentation tests that logs results to the {{< var validmind.platform >}}.
 
 {{< include /get-started/common-assets/_access-quickstart-notebook.qmd >}}
 
