--- a/site/get-started/common-assets/_get-your-code-snippet.qmd
+++ b/site/get-started/common-assets/_get-your-code-snippet.qmd
@@ -1,6 +1,6 @@
 #### Get your code snippet
 
-Before we move on, let's also retrieve the unique *code snippet* for your model that will enable you to connect your testing environment with the correct model in the {{< var validmind.platform >}}:
+Before we move on, let's also retrieve the unique *code snippet* for your model that enables you to connect your testing environment with the correct model in the {{< var validmind.platform >}}:
 
 1. In the left sidebar that appears for your model, click **{{< fa rocket >}} Getting Started**.
 
