--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -63,9 +63,9 @@ On the model details page after you've registered your model:
 
 ## Using the {{< var validmind.developer >}}
 
-Next, let's set up the {{< var validmind.developer >}} in your validation environment of choice so we can use it to run and log tests, which will help automate the validation of your models.
+Next, let's set up the {{< var validmind.developer >}} in your validation environment of choice so we can use it to run and log tests, which helps automate the validation of your models.
 
-Our companion notebook, **Quickstart for model validation,**[^1] will walk you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running data quality and model evaluation tests that will log the results to the {{< var validmind.platform >}}.
+Our companion notebook, **Quickstart for model validation,**[^1] walks you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running data quality and model evaluation tests that log results to the {{< var validmind.platform >}}.
 
 {{< include /get-started/common-assets/_access-quickstart-notebook.qmd >}}
 
