--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -70,6 +70,23 @@ Refer to [Workflow step types](/guide/model-workflows/setting-up-model-workflows
 
 :::
 
+#### Add conditional requirements*
+
+Conditional requirements can be configured for the following step types:[^6]
+
+| Step type | Conditional options |
+|---:|---|
+| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
+| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
+| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
+| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
+: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+
+For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
+
+- Click **{{< fa plus >}} Rule** to add an independent rule.
+- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify. 
+
 <!-- {{< include _configure-workflow-steps.qmd >}} -->
 
 ### Link workflow together
@@ -78,9 +95,11 @@ To initiate the beginning of your workflow:^[After you’ve [configured your wor
 
 1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
 
-1. Drag from the period (**.**) at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the first step of your workflow.
+2. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the any **{{< fa circle >}}** on the first step of your workflow.
 
-### Link steps together
+3. Continue with [linking your steps together](#link-steps-together).
+
+#### Link steps together
 
 ::: {.callout}
 Hover over a workflow step to view an animation of the steps connecting to and from that step.
@@ -88,13 +107,11 @@ Hover over a workflow step to view an animation of the steps connecting to and f
 
 To link subsequent steps together:
 
-1. Click **{{< fa circle >}}** above or below the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
+1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to any **{{< fa circle >}}** on the subsequent step.
 
-    You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps: 
+    You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
-    ![Multiple steps linked together at various points in the default Inventory Model workflow](/guide/model-workflows/linked-workflow.gif){fig-alt="An animated gif showing an example of multiple steps linked together at various points in the default Inventory Model workflow" .screenshot}
-
-1. When you are finished, click **Save Workflow** to apply your changes.
+2. When you are finished, click **Save Workflow** to apply your changes.
 
 <!-- {{< include _link-workflow-steps.qmd >}} -->
 
@@ -187,6 +204,8 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
     :::
 
 [^5]: [Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)
+
+[^6]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-step-types)
 
 <!-- [^3]: [Status Change](#status-change) steps
 
